<resources>
    <string name="app_name">PeliculasAPP</string>
    <string name="edit_movie">Edit movie</string>
    <string name="contact">Contact Us</string>
    <string name="edit">Edit</string>
    <string name="id">Id:</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="director">Director:</string>
    <string name="writer">Writer:</string>
    <string name="year">Year:</string>
    <string name="runtime">Time::</string>
    <string name="rating">rating:</string>
    <string name="votes">Votes:</string>
    <string name="revenue">Revenue:</string>
    <string name="go_back">Back</string>
    <string name="filling_form">You can contact us by filling this form.</string>
    <string name="phone_number">638003651</string>
    <string name="contact_email">contact@aplicacionpeliculas.com</string>
    <string name="contact_page">https://aplicacionpeliculas.com</string>
    <string name="btn_call">Call</string>
    <string name="btn_send">Send an E-Mail</string>
    <string name="btn_open">Open the Page</string>
    <string name="emoji1">🎥</string>
    <string name="add_movie">Add Movie</string>
    <string name="add">ADD</string>
    <string name="name">Name</string>
    <string name="actors_list">Actors:</string>
    <string name="genres_list">Genres:</string>
</resources>