<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="es.usj.section_1.adrian.peliculasapp.ViewMovieViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1c182e"
        tools:context=".ViewMovieActivity">

        <TextView
            android:id="@+id/tvId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:shadowColor="#000000"
            android:shadowDx="1.2"
            android:shadowDy="1.2"
            android:shadowRadius="6.0"
            android:text="@string/id"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@android:color/white"
            android:shadowDx="1.2"
            android:shadowDy="1.2"
            android:shadowRadius="6.0"
            android:shadowColor="#000000"
            app:layout_constraintTop_toBottomOf="@+id/tvId" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:shadowColor="#000000"
            android:shadowDx="1.2"
            android:shadowDy="1.2"
            android:shadowRadius="6.0"
            android:text="@string/description"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/tvDirector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:shadowColor="#000000"
            android:shadowDx="1.2"
            android:shadowDy="1.2"
            android:shadowRadius="6.0"
            android:text="@string/director"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

        <TextView
            android:id="@+id/tvWriter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:shadowColor="#000000"
            android:shadowDx="1.2"
            android:shadowDy="1.2"
            android:shadowRadius="6.0"
            android:text="@string/writer"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDirector" />

        <TextView
            android:id="@+id/tvYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:shadowColor="#000000"
            android:shadowDx="1.2"
            android:shadowDy="1.2"
            android:shadowRadius="6.0"
            android:text="@string/year"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWriter" />

        <TextView
            android:id="@+id/tvRuntime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/runtime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@android:color/white"
            android:shadowDx="1.2"
            android:shadowDy="1.2"
            android:shadowRadius="6.0"
            android:shadowColor="#000000"
            app:layout_constraintTop_toBottomOf="@+id/tvYear" />

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/rating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@android:color/white"
            android:shadowDx="1.2"
            android:shadowDy="1.2"
            android:shadowRadius="6.0"
            android:shadowColor="#000000"
            app:layout_constraintTop_toBottomOf="@+id/tvRuntime" />

        <TextView
            android:id="@+id/tvVotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/votes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@android:color/white"
            android:shadowDx="1.2"
            android:shadowDy="1.2"
            android:shadowRadius="6.0"
            android:shadowColor="#000000"
            app:layout_constraintTop_toBottomOf="@+id/tvRating" />

        <TextView
            android:id="@+id/tvRevenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/revenue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@android:color/white"
            android:shadowDx="1.2"
            android:shadowDy="1.2"
            android:shadowRadius="6.0"
            android:shadowColor="#000000"
            app:layout_constraintTop_toBottomOf="@+id/tvVotes" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="550dp"
            android:layout_marginEnd="64dp"
            android:backgroundTint="#f1592a"
            android:text="@string/edit"
            android:textColor="#fffbcb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="@{() -> viewmodel.navigateToEditMovie()}"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>